# RedInsight

./: .dockerignore  .gitignore  ADVANCED_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_PAGE.md  LICENSE  NETWORK_TROUBLESHOOTING.md  README.md  SECURITY.md  USAGE_GUIDE.md  advanced_analyzer.py  analysis_result.json  analysis_status.json  background_analyzer.py  check_config.py  clustering.py  config.py  data_organizer.py  database.py  delete_venv.py  docker-compose.yml  env_example.txt  global_requirements.txt  insights_generator.py  launcher.py  llm_analyzer.py  main.py  merged_analysis_page.py  package_data.py  pyproject.toml  reddit_scraper.py  requirements.txt  requirements_clean.txt  run_app.py  setup.py  streamlit_app.py  structured_extractor.py  test_app.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
vector_cache/: all-MiniLM-L6-v2_cache.pkl
